<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.udacity.kavya.admissionbox.view.fragments.MoreFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/userprofile"
        android:textSize="30sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageposter"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/content_des"
                android:scaleType="fitXY" />
            <TextView
                android:id="@+id/txtemil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/user_email"
                android:padding="10dp"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/txtname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/Name"
                android:padding="10dp"
                android:textSize="30sp"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        card_view:cardCornerRadius="2dp"
        android:layout_marginTop="20dp"
        card_view:cardElevation="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/term_condition"
            android:padding="10dp"
            android:textSize="30sp"/>
    </android.support.v7.widget.CardView>



</LinearLayout>
